fixed email validation err

--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node src/index.js",
-    "dev": "nodemon src/index.js"
+    "dev": "nodemon src/index.js",
+    "build": "npm run build-docs",
+    "build-docs": "redocly bundle --ext json -o docs/swagger.json",
+    "preview-docs": "redocly preview-docs"
   },
   "keywords": [],
   "author": "Aleksandra Laposhko <laposhko0@gmail.com>",
@@ -32,6 +35,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.6.0",
+    "@redocly/cli": "^1.18.1",
     "eslint": "^9.6.0",
     "globals": "^15.7.0"
   }
