--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "nodemailer": "^6.9.14",
     "nodemon": "^3.1.4",
     "pino-http": "^10.2.0",
-    "pino-pretty": "^11.2.1"
+    "pino-pretty": "^11.2.1",
+    "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.6.0",
